--- a/log4j-transitive-example/pom.xml
+++ b/log4j-transitive-example/pom.xml
@@ -18,6 +18,11 @@
             <artifactId>twilio</artifactId>
             <version>8.6.1</version>
         </dependency>
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.3</version>
+        </dependency>
     </dependencies>
 
 </project>
